--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hexalabs-website</title>
+    <meta name="description" content="Hexalabs - Accelerating Innovation Through IT Services & Expert Training. We specialize in cloud platforms, software development, and technical certifications." />
+    <title>Hexalabs | IT Services & Expert Training</title>
   </head>
   <body>
     <div id="root"></div>
