all loogos updated

--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Hexalabs - Accelerating Innovation Through IT Services & Expert Training. We specialize in cloud platforms, software development, and technical certifications." />
-    <title>Hexalabs | IT Services & Expert Training</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Hexalabs | IT Services & Expert Training | Cloud, DevOps, Cybersecurity</title>
+  <meta name="title" content="Hexalabs | IT Services & Expert Training | Cloud, DevOps, Cybersecurity" />
+  <meta name="description"
+    content="Hexalabs - Accelerating Innovation Through IT Services & Expert Training. We specialize in cloud platforms (AWS, Azure, GCP), DevOps automation, cybersecurity, AI/ML solutions, and industry-leading technical certifications." />
+  <meta name="keywords"
+    content="IT Services, Cloud Training, AWS Training, Azure Training, DevOps, Kubernetes, Cybersecurity, AI, Machine Learning, Corporate Training, Cloud Migration, Bangalore" />
+  <meta name="author" content="Hexalabs" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://hexalabs.online/" />
+  <meta property="og:title" content="Hexalabs | IT Services & Expert Training" />
+  <meta property="og:description"
+    content="Accelerating Innovation Through IT Services & Expert Training. Cloud, DevOps, Cybersecurity, AI/ML solutions and technical certifications." />
+  <meta property="og:image" content="https://hexalabs.online/og-image.png" />
+  <meta property="og:site_name" content="Hexalabs" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://hexalabs.online/" />
+  <meta property="twitter:title" content="Hexalabs | IT Services & Expert Training" />
+  <meta property="twitter:description"
+    content="Accelerating Innovation Through IT Services & Expert Training. Cloud, DevOps, Cybersecurity solutions." />
+  <meta property="twitter:image" content="https://hexalabs.online/og-image.png" />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#6366f1" />
+  <meta name="msapplication-TileColor" content="#6366f1" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://hexalabs.online/" />
+
+  <!-- Preconnect to fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
